Update contact information in index.html

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 Verantwortlich für die Datenverarbeitung im Sinne der Datenschutz-Grundverordnung (DSGVO):
 </p>
 <p>
-<strong>[Dein Name / Firmenname]</strong><br>
-[Adresse]<br>
-E-Mail: [deine E-Mail-Adresse]
+<strong>Christian Neßmann</strong><br>
+Backsgasse 7, 99713 Helbedündorf <br>
+E-Mail: info@funtivity.de
 </p>
 
 <h2>2. Zielgruppe der App</h2>
