Update contact email address in index.html

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ Diese Datenschutzerklärung kann angepasst werden, wenn sich rechtliche Anforder
 <h2>12. Kontakt</h2>
 <p>
 Bei Fragen zum Datenschutz wenden Sie sich bitte an:<br>
-<strong>[deine E-Mail-Adresse]</strong>
+<strong>info@funtivity.de</strong>
 </p>
 
 </body>
